--- a/templates/index.html
+++ b/templates/index.html
@@ -174,8 +174,8 @@
         r32: "M 8.2992383,0.78942671 C 8.3654371,0.66936937 8.2607415,0.52620333 8.0892915,0.72137323 7.8135162,1.0353014 7.5300152,1.2443566 7.3616873,1.3386567 6.8867602,1.6047006 6.2849125,1.885614 5.8597271,1.8648124 5.8912125,1.744091 5.9080929,1.619885 5.9080929,1.4951313 5.9080929,0.66948315 5.2387765,2.0108712e-4 4.4131442,0 h -1.588e-4 c -0.8258439,-5.820455e-5 -1.495425,0.66928206 -1.4955573,1.4951313 0,0.8261112 0.6696604,1.4848258 1.4957161,1.4957161 C 5.3537908,3.0029388 6.3094129,2.6195258 6.9122131,2.1124175 6.8052421,2.8271126 6.1324596,4.8667908 5.7232285,6.1153622 5.2994983,6.3336355 4.8230367,6.5254637 4.4690506,6.5081467 4.500536,6.387428 4.51739,6.263222 4.51739,6.1384683 4.51739,5.3127619 3.8479677,4.6434719 3.022256,4.643329 l 1.059e-4,-5.82e-5 C 2.196465,4.6431279 1.5268046,5.3125026 1.5266458,6.1384101 1.5265135,6.9645186 2.1963063,7.6232359 3.0223619,7.6341261 3.963035,7.6462176 4.9185777,7.2628046 5.5213779,6.7556936 5.4071044,7.5190244 4.6552379,9.5904659 4.2085948,10.934433 3.7809487,11.156135 3.3009152,11.354329 2.9425106,11.336782 2.9739696,11.216034 2.99085,11.091886 2.99085,10.967104 2.99085,10.141368 2.3213748,9.4721098 1.4956896,9.4719061 0.66976625,9.4717923 1.3231987e-4,10.141138 2.8213606e-8,10.967104 -1.587218e-4,11.79327 0.66963396,12.451958 1.4956896,12.462849 2.4046392,12.47494 3.3628542,12.115583 3.9705227,11.633973 3.3175046,13.534028 2.0317883,17.335434 1.7548754,17.979628 1.6366067,18.254676 2.720684,18.293464 2.7722777,18.04606 3.0844331,16.548335 8.1755985,1.0135791 8.2992383,0.78942671 Z",
         repL: "M 4.917649,10.702369 A 0.67222979,0.67222979 0 0 0 5.5898759,11.374596 0.67222979,0.67222979 0 0 0 6.2621107,10.702369 0.67222979,0.67222979 0 0 0 5.5898759,10.030142 0.67222979,0.67222979 0 0 0 4.917649,10.702369 Z m 0,-4.6472207 A 0.67222979,0.67222979 0 0 0 5.5898759,6.7273752 0.67222979,0.67222979 0 0 0 6.2621107,6.0551483 0.67222979,0.67222979 0 0 0 5.5898759,5.382895 0.67222979,0.67222979 0 0 0 4.917649,6.0551483 Z M 0,19.049868 H 2.0271317 V 0 H 0 Z m 3.1750026,0 H 3.6146502 V 0 H 3.1750026 Z",
         repR: "M 2.6473838,0 V 19.049471 H 3.0871504 V 0 Z m 1.5875,0 V 19.049471 H 6.2621504 V 0 Z M 0.6723089,5.382604 A 0.67222979,0.67222979 0 0 0 0,6.0549102 0.67222979,0.67222979 0 0 0 0.6723089,6.7272429 0.67222979,0.67222979 0 0 0 1.3446204,6.0549102 0.67222979,0.67222979 0 0 0 0.6723089,5.382604 Z m 0,4.647274 A 0.67222979,0.67222979 0 0 0 0,10.702184 0.67222979,0.67222979 0 0 0 0.6723089,11.37449 0.67222979,0.67222979 0 0 0 1.3446204,10.702184 0.67222979,0.67222979 0 0 0 0.6723089,10.029878 Z",
-        volta1: "M 0 4.1e-06 L 0 0.680582 L 0 4.55476 L 0.766538 4.55476 L 0.766538 0.680582 L 9.79483 0.680582 L 9.79483 4.55476 L 10.5614 4.55476 L 10.5614 0.680582 L 10.5614 4.1e-06 Z M 1.56545 3.4374 C 1.56572 3.72217 1.4834 3.77658 1.3294 3.78489 L 1.08541 3.79791 C 1.06072 3.8621 1.05798 3.92317 1.08541 3.96891 L 2.72462 3.96891 C 2.73525 3.92289 2.73525 3.8572 2.72462 3.79472 L 2.46381 3.78169 C 2.31271 3.77416 2.23806 3.71706 2.23806 3.43655 L 2.23806 1.08233 L 1.85462 1.08233 C 1.77137 1.25343 1.52811 1.33139 1.13791 1.3429 C 1.13913 1.36728 1.13074 1.40442 1.13376 1.43007 C 1.18514 1.43007 1.3078 1.42826 1.40215 1.43488 C 1.48892 1.44096 1.56343 1.46846 1.56367 1.70518 Z M 3.44474 3.70088 C 3.44474 3.8455 3.32749 3.96277 3.18285 3.96277 C 3.0382 3.96277 2.92095 3.8455 2.92095 3.70088 C 2.92095 3.55622 3.0382 3.43898 3.18285 3.43898 C 3.32749 3.43898 3.44474 3.55622 3.44474 3.70088 Z",
-        volta2: "M 0 4.1e-06 L 0 0.680582 L 0 4.55476 L 0.766538 4.55476 L 0.766538 0.680582 L 9.79483 0.680582 L 9.79483 4.55476 L 10.5614 4.55476 L 10.5614 0.680582 L 10.5614 4.1e-06 Z M 3.72379 3.70088 C 3.72379 3.8455 3.60654 3.96277 3.4619 3.96277 C 3.31725 3.96277 3.2 3.8455 3.2 3.70088 C 3.2 3.55622 3.31725 3.43898 3.4619 3.43898 C 3.60654 3.43898 3.72379 3.55622 3.72379 3.70088 Z M 1.68548 2.81833 C 1.40436 3.05796 1.05151 3.47798 0.955935 3.8347 C 0.918759 3.97342 1.06482 4.02881 1.15546 3.88456 C 1.48812 3.35526 1.77929 3.62647 2.21549 3.87838 C 2.39862 3.98411 2.58594 4.01706 2.7642 3.87838 C 2.87646 3.79108 3.06353 3.42323 3.08223 3.3484 C 3.11339 3.22367 3.03879 3.15955 2.96999 3.26733 C 2.78294 3.56039 2.7455 3.57285 2.45868 3.35462 C 1.93392 2.95538 1.67619 3.20698 1.42982 3.36697 C 1.57324 3.16117 1.9224 2.84318 2.29655 2.63743 C 3.42712 2.0156 2.87312 1.38173 2.73927 1.2968 C 2.23172 0.974784 1.51426 0.994137 1.12429 1.44647 C 0.940061 1.66014 0.987132 2.10118 1.29888 2.10118 C 1.71664 2.10118 1.6543 1.58363 1.47348 1.5213 C 1.52958 1.41529 1.70418 1.25317 1.991 1.25317 C 2.14692 1.25317 2.29019 1.49312 2.31528 1.81435 C 2.34645 2.2125 1.93042 2.60944 1.68548 2.81828 Z",
+        volta1: "M 0,14.333315 H 0.96890417 V 0.4397666 H 26.984801 V 0 L 0,0.02460625 Z M 5.01473 12.7832 C 5.01552 13.6137 4.77544 13.7724 4.32634 13.7966 L 3.61474 13.8346 C 3.54275 14.0218 3.53476 14.1999 3.61474 14.3333 L 8.39531 14.3333 C 8.42632 14.1991 8.42632 14.0075 8.39531 13.8253 L 7.63471 13.7873 C 7.19402 13.7654 6.97633 13.5988 6.97633 12.7807 L 6.97633 5.91493 L 5.85806 5.91493 C 5.61527 6.41393 4.90584 6.64129 3.76787 6.67484 C 3.77142 6.74596 3.74694 6.85428 3.75575 6.92908 C 3.9056 6.92908 4.26334 6.92379 4.53849 6.9431 C 4.79154 6.96083 5.00884 7.04102 5.00955 7.7314 Z M 11.8033 13.4726 C 11.8033 13.9499 11.4163 14.3369 10.939 14.3369 C 10.4617 14.3369 10.0747 13.9499 10.0747 13.4726 C 10.0747 12.9952 10.4617 12.6083 10.939 12.6083 C 11.4163 12.6083 11.8033 12.9952 11.8033 13.4726 Z",
+        volta2: "M 0,14.333315 H 0.96890417 V 0.4397666 H 26.984801 V 0 L 0,0.02460625 Z M 11.8033 13.4726 C 11.8033 13.9499 11.4163 14.3369 10.939 14.3369 C 10.4617 14.3369 10.0747 13.9499 10.0747 13.4726 C 10.0747 12.9952 10.4617 12.6083 10.939 12.6083 C 11.4163 12.6083 11.8033 12.9952 11.8033 13.4726 Z M 4.56547 10.7809 C 3.69956 11.519 2.61268 12.8128 2.31828 13.9116 C 2.20377 14.3389 2.65367 14.5095 2.93288 14.0652 C 3.95756 12.4348 4.85444 13.2702 6.19805 14.0461 C 6.76214 14.3718 7.33915 14.4733 7.88824 14.0461 C 8.23402 13.7772 8.81023 12.6441 8.86783 12.4136 C 8.96382 12.0294 8.73403 11.8319 8.52212 12.1639 C 7.94594 13.0666 7.83064 13.105 6.94714 12.4328 C 5.33075 11.203 4.53686 11.978 3.77796 12.4708 C 4.21976 11.8369 5.29524 10.8574 6.44774 10.2237 C 9.93021 8.30826 8.22373 6.35577 7.81143 6.09417 C 6.24806 5.10228 4.03807 5.16189 2.83686 6.55518 C 2.26939 7.21336 2.41438 8.57186 3.37466 8.57186 C 4.66146 8.57186 4.46945 6.97767 3.91247 6.78569 C 4.08527 6.45916 4.62307 5.95979 5.50656 5.95979 C 5.98683 5.95979 6.42813 6.69888 6.50544 7.68837 C 6.60143 8.91476 5.31995 10.1375 4.56547 10.7807 Z",
         segno: "M 0.8245475,5.4857438 C 1.5228887,6.3630413 2.6948077,7.1000514 3.8599004,7.7039602 L 0,13.616077 H 1.0927556 L 4.6850035,8.1135405 C 5.4198573,8.462481 6.1076152,8.7582534 6.6078629,8.9919201 8.1299315,9.7029376 8.8570329,11.594714 8.2470625,12.293372 7.1257848,13.577713 6.6500904,12.478448 6.4483721,11.587517 6.189689,10.444406 4.3308323,10.563286 4.3308323,11.974893 c 0,1.161204 1.3861785,1.821286 2.4365744,1.821286 2.3846102,0 3.8955393,-3.267255 2.1578623,-5.484881 C 8.2503962,7.4499444 7.1172387,6.7266661 5.978525,6.1322082 L 9.894279,0.13411716 H 8.8014175 L 5.1538981,5.7212653 C 4.3842781,5.3548068 3.662045,5.0480092 3.1419535,4.8050185 1.6198585,4.0941016 0.90408125,2.1893792 1.502754,1.5035792 2.5634685,0.28862311 3.099726,1.3185984 3.3014444,2.2094214 3.5601275,3.3525063 5.4185079,3.2337296 5.4185079,1.8220476 5.4185079,0.73346707 4.200181,-0.02340253 3.082581,5.5284688e-4 0.21097875,0.06188591 -0.79523167,3.450934 0.8245475,5.4857438 Z M 9.4826667,4.1001289 c -0.5957623,0 -1.0786534,0.4829942 -1.0786534,1.0787406 0,0.5957438 0.4828911,1.0786348 1.0786534,1.0786348 0.5957093,0 1.0787063,-0.482891 1.0787063,-1.0786348 0,-0.5957464 -0.482997,-1.0787406 -1.0787063,-1.0787406 z M 1.0786533,7.6742607 C 0.48289104,7.6742607 0,8.157255 0,8.7529987 c 0,0.5957438 0.48289104,1.0786349 1.0786533,1.0786349 0.5957359,0 1.0786269,-0.4828911 1.0786269,-1.0786349 0,-0.5957437 -0.482891,-1.078738 -1.0786269,-1.078738 z",
         fin: "M 3.61467 19.0499 L 1.58753 19.0499 L 1.58753 0 L 3.61467 0 Z M 0.439668 19.0499 L 2.1e-05 19.0499 L 2.1e-05 0 L 0.439668 0 Z"
     };
@@ -185,7 +185,7 @@
         usul: {name: "Aksak", meter: [9, 8]},
         acci: null,
         duration: "1/4",
-        ghostNote: {symbol: null, symbolR: null, symbolDot: null},
+        ghostNote: {symbol: null, symbolR: null, symbolDot: null, width: 0, height: 0},
         dot: false,
         rest: null,
         loc: null,
@@ -257,6 +257,8 @@
                 });
                 mParams.ghostNote.symbol.addClass('no-print');
                 mParams.ghostNote.symbolR.addClass('no-print');
+                mParams.ghostNote.width = mParams.ghostNote.symbol.getBBox().width;
+                mParams.ghostNote.height = mParams.ghostNote.symbol.getBBox().height;
             }
 
             if (isDot) {
@@ -311,6 +313,8 @@
                     fill: 'transparent'
                 });
                 mParams.ghostNote.symbol.addClass('no-print');
+                mParams.ghostNote.width = mParams.ghostNote.symbol.getBBox().width;
+                mParams.ghostNote.height = mParams.ghostNote.symbol.getBBox().height;
             }
 
             if (isLoc) {
@@ -351,6 +355,8 @@
                     fill: 'transparent'
                 });
                 mParams.ghostNote.symbol.addClass('no-print');
+                mParams.ghostNote.width = mParams.ghostNote.symbol.getBBox().width;
+                mParams.ghostNote.height = mParams.ghostNote.symbol.getBBox().height;
             }
 
             sender.classList.add('clicked');
@@ -1142,7 +1148,7 @@
                         if (mParams.rest) {
                             scaleFactor = this.porteLiHe / 5;
                             scaleStr = 's' + scaleFactor + ' 0 0';
-                            let height = Math.round(mParams.ghostNote.symbol.getBBox().height * 100) / 100;
+                            let height = mParams.ghostNote.height * scaleFactor;
                             let tTop;
                             switch (mParams.duration) {
                                 case "1/32":
@@ -1179,28 +1185,63 @@
                     case 'loc':
                         scaleFactor = this.porteLiHe / 4.75;
                         scaleStr = 's' + scaleFactor + ' 0 0';
-                        let height = mParams.ghostNote.symbol.getBBox().height;
-                        let width = mParams.ghostNote.symbol.getBBox().width;
-                        let tTop = this.porteTop + (this.porteLiHe * 4 - height) / 2;
+                        let width, height, tTop;
 
                         switch (mParams.loc) {
                             case 'repL':
+                                scaleFactor = this.porteLiHe / 4.75;
+                                scaleStr = 's' + scaleFactor + ' 0 0';
+                                height = mParams.ghostNote.height * scaleFactor;
+                                width = mParams.ghostNote.width * scaleFactor;
+                                tTop = this.porteTop + (this.porteLiHe * 4 - height) / 2;
                                 translateStr = 't ' + (this.startPos) + ' ' + tTop;
                                 break;
                             case 'repR':
+                                scaleFactor = this.porteLiHe / 4.75;
+                                scaleStr = 's' + scaleFactor + ' 0 0';
+                                scaleFactor = this.porteLiHe / 4.75;
+                                scaleStr = 's' + scaleFactor + ' 0 0';
+                                height = mParams.ghostNote.height * scaleFactor;
+                                width = mParams.ghostNote.width * scaleFactor;
+                                tTop = this.porteTop + (this.porteLiHe * 4 - height) / 2;
                                 translateStr = 't ' + (this.endPos - width) + ' ' + tTop;
                                 break;
                             case 'volta1':
-                                scaleFactor = this.porteLiHe / 2;
+                                scaleFactor = this.porteLiHe / 8;
                                 scaleStr = 's' + scaleFactor + ' 0 0';
-                                tTop = this.porteTop - height - 2;
-                                translateStr = 't ' + (this.startPos) + ' ' + tTop;
+                                height = mParams.ghostNote.height * scaleFactor;
+                                width = mParams.ghostNote.width * scaleFactor;
+                                tTop = this.porteTop - height - (this.sParams.cfg.lineThickness * 2);
+                                translateStr = 't ' + this.startPos + ' ' + tTop;
                                 break;
                             case 'volta2':
+                                scaleFactor = this.porteLiHe / 8;
+                                scaleStr = 's' + scaleFactor + ' 0 0';
+                                height = mParams.ghostNote.height * scaleFactor;
+                                width = mParams.ghostNote.width * scaleFactor;
+                                tTop = this.porteTop - height - (this.sParams.cfg.lineThickness * 2);
+                                translateStr = 't ' + this.startPos + ' ' + tTop;
                                 break;
                             case 'segno':
+                                scaleFactor = this.porteLiHe / 8;
+                                scaleStr = 's' + scaleFactor + ' 0 0';
+                                height = mParams.ghostNote.height * scaleFactor;
+                                width = mParams.ghostNote.width * scaleFactor;
+                                tTop = this.porteTop - height - (this.sParams.cfg.lineThickness * 2);
+                                if (x - this.startPos < this.endPos - x) {
+                                    translateStr = 't ' + this.startPos + ' ' + tTop;
+                                } else {
+                                    translateStr = 't ' + (this.endPos - width) + ' ' + tTop;
+                                }
                                 break;
                             case 'fin':
+                                scaleFactor = this.porteLiHe / 4.75;
+                                scaleStr = 's' + scaleFactor + ' 0 0';
+                                scaleFactor = this.porteLiHe / 4.75;
+                                scaleStr = 's' + scaleFactor + ' 0 0';
+                                height = mParams.ghostNote.height * scaleFactor;
+                                width = mParams.ghostNote.width * scaleFactor;
+                                tTop = this.porteTop + (this.porteLiHe * 4 - height) / 2;
                                 translateStr = 't ' + (this.endPos - width) + ' ' + tTop;
                                 break;
                             default:
