adding note and rest via click

--- a/static/style/site.css
+++ b/static/style/site.css
@@ -230,7 +230,7 @@ body ::-webkit-scrollbar-thumb:hover {
     margin-left: 0.5em;
 }
 
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 1030px) {
     html, body {
         font-size: 11pt;
     }
@@ -242,9 +242,21 @@ body ::-webkit-scrollbar-thumb:hover {
     }
 }
 
-@media screen and (max-width: 810px) {
+@media screen and (max-width: 820px) {
     html, body {
         font-size: 9pt;
+    }
+}
+
+@media screen and (max-width: 750px) {
+    html, body {
+        font-size: 8pt;
+    }
+}
+
+@media screen and (max-width: 670px) {
+    html, body {
+        font-size: 7pt;
     }
 }
 
